# tianji

./: .gitignore  AGENTS.md  Cargo.toml  DAEMON_CONTRACT.md  DEV_PLAN.md  LOCAL_API_CONTRACT.md  README.md  RELEASE_CHECKLIST.md  SCORING_SPEC.md  SESSION_HANDOFF.md  TUI_CONTRACT.md  WEB_UI_CONTRACT.md  cleanup.sh  handoff.md  plan-crucix.md  plan.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-branch-setup-error.txt  task-1-branch-setup.txt  task-2-roadmap-docs.txt  task-2-tui-lens-state.txt  task-3-product-docs.txt  task-3-tui-bindings.txt  task-4-doc-alignment.txt  task-4-scoring-spec.txt  task-5-detail-lens.txt  task-5-fa-gap-proof-error.txt  task-5-fa-gap-proof.txt  task-6-compare-lens.txt  task-7-tui-tests.txt  task-8-operator-copy.txt  task-8-postchange-docs.txt  task-9-interactive-tui.txt  task-9-verification.txt
.sisyphus/plans/: large-file-decoupling.md  tianji-deterministic-scoring-model-expansion.md  tui-persisted-navigation-parity.md
.trellis/: .template-hashes.json  AGENTS.md
.trellis/references/: rust-crates
examples/: config.example.yaml  sources.example.yaml
scripts/: check-eval.sh  check-replay-smoke.sh
src/: alert_dispatch.rs  api.rs  backtrack.rs  daemon.rs  delta.rs  delta_memory.rs  eval.rs  fetch.rs  grouping.rs  hongmeng.rs  lib.rs  llm.rs  main.rs  models.rs  normalize.rs  nuwa.rs  profile.rs  scoring.rs  scoring_params.rs  source_registry.rs  storage.rs  time_utils.rs  tui.rs  utils.rs  webui.rs  worldline.rs
tests/: AGENTS.md  support.py  test_cli_inputs.py  test_daemon.py  test_docs_mature_stack.py  test_grouping.py  test_history_compare.py  test_history_list.py  test_history_show.py  test_pipeline.py  test_scoring.py  test_tui.py  test_tui_render.py  test_tui_state.py  test_webui.py  test_webui_browser.py
tianji/: AGENTS.md  api.py  backtrack.py  cli.py  cli_daemon.py  cli_history.py  cli_sources.py  cli_validation.py  daemon.py  fetch.py  models.py  normalize.py  pipeline.py  scoring.py  storage.py  storage_compare.py  storage_filters.py  storage_views.py  storage_write.py  tui.py  tui_render.py  tui_state.py  webui_server.py
(+440 files in other folders)
