[package]
name = "tianji"
version = "0.2.0"
edition = "2021"
description = "TianJi — geopolitical intelligence engine"

[dependencies]
regex = "1.10"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
libc = "0.2"
