[package]
name = "tianji"
version = "0.2.0"
edition = "2021"
description = "TianJi — geopolitical intelligence engine"

[dependencies]
regex = "1.12"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
rusqlite = { version = "0.39", features = ["bundled"] }
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking"] }
libc = "0.2"
ratatui = "0.30"
crossterm = "0.28"
