[package]
name = "tianji"
version = "0.2.0"
edition = "2021"
description = "TianJi — geopolitical intelligence engine"

[dependencies]
regex = "1.12"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
rusqlite = { version = "0.39", features = ["bundled"] }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking"] }
libc = "0.2"
ratatui = "0.30"
crossterm = "0.28"
serde_yaml = "0.9"
async-openai = "0.34"
ollama-rs = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
